exports[`buildStatus returns correct build status for the \`blocked\` state 1`] = `
Object {
  "prefix": "Blocked",
  "timeValue": 2016-10-05T04:57:47.000Z,
}
`;

exports[`buildStatus returns correct build status for the \`canceled\` state 1`] = `
Object {
  "prefix": "Canceled",
  "timeValue": 2016-10-05T04:57:47.000Z,
}
`;

exports[`buildStatus returns correct build status for the \`canceling\` state 1`] = `
Object {
  "prefix": "Canceled",
  "timeValue": 2016-10-05T04:57:47.000Z,
}
`;

exports[`buildStatus returns correct build status for the \`failed\` state 1`] = `
Object {
  "prefix": "Finished",
  "timeValue": 2016-10-05T04:57:47.000Z,
}
`;

exports[`buildStatus returns correct build status for the \`not_run\` state 1`] = `
Object {
  "prefix": "Created",
  "timeValue": 2016-10-05T04:57:46.920Z,
}
`;

exports[`buildStatus returns correct build status for the \`passed\` state 1`] = `
Object {
  "prefix": "Finished",
  "timeValue": 2016-10-05T04:57:47.000Z,
}
`;

exports[`buildStatus returns correct build status for the \`scheduled\` state 1`] = `
Object {
  "prefix": "Created",
  "timeValue": 2016-10-05T04:57:46.920Z,
}
`;

exports[`buildStatus returns correct build status for the \`skipped\` state 1`] = `
Object {
  "prefix": "Skipped",
  "timeValue": 2016-10-05T04:57:46.920Z,
}
`;

exports[`buildStatus returns correct build status for the \`started\` state 1`] = `
Object {
  "prefix": "Created",
  "timeValue": 2016-10-05T04:57:46.920Z,
}
`;

exports[`buildTime returns correct time properties for the \`blocked\` state 1`] = `Object {}`;

exports[`buildTime returns correct time properties for the \`canceled\` state 1`] = `
Object {
  "from": 2016-10-05T04:57:46.920Z,
  "to": 2016-10-05T04:57:47.000Z,
}
`;

exports[`buildTime returns correct time properties for the \`canceled\` state 2`] = `Object {}`;

exports[`buildTime returns correct time properties for the \`canceling\` state 1`] = `
Object {
  "from": 2016-10-05T04:57:46.920Z,
}
`;

exports[`buildTime returns correct time properties for the \`failed\` state 1`] = `
Object {
  "from": 2016-10-05T04:57:46.920Z,
  "to": 2016-10-05T04:57:47.000Z,
}
`;

exports[`buildTime returns correct time properties for the \`not_run\` state 1`] = `Object {}`;

exports[`buildTime returns correct time properties for the \`passed\` state 1`] = `
Object {
  "from": 2016-10-05T04:57:46.920Z,
  "to": 2016-10-05T04:57:47.000Z,
}
`;

exports[`buildTime returns correct time properties for the \`scheduled\` state 1`] = `
Object {
  "from": 2016-10-05T05:14:26.920Z,
}
`;

exports[`buildTime returns correct time properties for the \`skipped\` state 1`] = `Object {}`;

exports[`buildTime returns correct time properties for the \`started\` state 1`] = `
Object {
  "from": 2016-10-05T04:57:46.920Z,
}
`;

exports[`shortCommit returns a 7-character SHA1 for a full SHA1 commitish 1`] = `"be9c03b"`;

exports[`shortCommit returns the full name for a 40-character non-SHA1 commitish 1`] = `"so-this-is-a-forty-character-branch-name"`;

exports[`shortCommit returns the full name for a non-SHA1 commitish 1`] = `"preload-pipeline-names-sperlunking"`;

exports[`shortMessage returns the first line of a multi-line message 1`] = `"✨ Somehow this is the first spec I\'ve written for our front-end, and this seems really odd to me"`;

exports[`shortMessage returns the whole message in a one-line message 1`] = `"Bump frontend"`;
